src/examples/valid/non-plot/array-simple.ra
func main(): void {
  c = declare_arr<int>(3);
  c[0] = 1;
  c[1] = 2;
  c[2] = 3;
  print(c[0], c[1], c[2], c[1], c[0]);
}
